# serpentine

./: .gitignore  .zenodo.json  CITATION.cff  GATE0_AGENT_SPEC.md  LICENSE  README.md  pyproject.toml  requirements.txt
baseline/: README.md  build_lkh.sh  compute_gap.py  env_setup.sh  eval_pomo.py  lkh_solve.py  run_baseline.sh  sbatch_eval.sh  sbatch_gap.sh  sbatch_lkh.sh
candidate/: aggregate_sweep.py  encoders.py  hilbert.py  install_mamba.sh  run_sweep.sh  sbatch_calib.sh  sbatch_kernel_gate.sh  sbatch_smoke.sh  test_encoders.py  test_hilbert.py  test_kernel_parity.py  train.py
docs/: gate0_baseline.md  leonardo.md
paper/: .gitignore  main.tex  refs.bib
results/gate0/: FINDINGS.md  GEOMETRY.md  GLOBAL_CHANNEL.md  baseline_report_standard_n10000.json  geometry_scaling.json  wave_2026-07-17_ids.txt
results_gate0/: SUMMARY.md  baseline_report_longtrain_n10000.json
results_gate0/smoke/: smoke_attention_hilbert_s1.json  smoke_mamba_hilbert_s1.json
scripts/: _common.sh  aggregate_sweep.py  bestofk_probe.py  build_lkh.sh  collect_results.sh  diagnostics.py  env_setup.sh  geometry_scaling.py  install_mamba.sh  order_probe.py  reproduce_baseline.sh  run_bimamba.sh  run_global_channel.sh  run_sweep.sh  zenodo_publish.py
scripts/figures/: _social_style.py  plot_hero.py  plot_ordering.py  social_bars.py  social_hero.py  social_story.py
scripts/slurm/: bestofk.sbatch  eval.sbatch  gap.sbatch  kernel_gate.sbatch  lkh.sbatch  (+2 more)
tests/: test_bimamba.py  test_encoders.py  test_global_channel.py  test_hilbert.py  test_hybrid.py  test_kernel_parity.py  test_zorder.py
(+70 files in other folders)
